fix(blog): remove author gap
It caused a gap at the external link icon.

--- a/components/blog-post/server.css
+++ b/components/blog-post/server.css
@@ -73,7 +73,6 @@
 
   flex-wrap: wrap;
 
-  gap: var(--author-gap);
   align-content: flex-start;
   align-items: center;
 
